<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter your Name.</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="flag_image">Flag Image</string>
    <string name="submit">SUBMIT</string>
</resources>